--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!-- We can render into #modal sometimes when we need to. It's like, another
+    render point. -->
+    <div id="modal"></div>
     <div id="root">not rendered</div>
     <!-- <script src="https://unpkg.com/react@17.0.1/umd/react.development"></script> -->
     <!-- <script src="https://unpkg.com/react-dom@17.0.1/umd/react-dom.development"></script> -->
